# abixio

./: .gitignore  404.html  Cargo.toml  PLAN.md  README.md  build.py  index.html  mkdocs.yml  scratch_ccusage.json  scratch_ccusage_report.py  scratch_token_ratios.py  sitemap.xml
.claude/: project_state.md  settings.local.json
.github/workflows/: ci.yml  docs.yml
admin-api/: index.html
architecture/: index.html
bench-results/: baseline-l2-storage.txt  baseline-prepool.txt  phase1-pool-primitive.txt  phase2-slot-writes.txt  phase2.5-json-serializers.txt  phase3-rename-worker.txt  phase4-integrated-put.txt  phase4.5-integrated-put-after-fix.txt  phase4.5-integration-breakdown.txt  phase5-integrated-put.txt  phase5.5-breakdown-stable.txt  phase5.5-breakdown.txt  phase5.5-integrated-put.txt  phase5.5-stable-medians.txt  phase5.6-stable-medians.txt  phase8-tier-matrix-sequential.txt  phase8.5-stack-breakdown-v2.txt  phase8.5-stack-breakdown-v3.txt  phase8.5-stack-breakdown-v4.txt  phase8.5-stack-breakdown-v5.txt  phase8.5-stack-breakdown.txt  phase8.6-stack-breakdown.txt  phase8.6-tier-matrix.txt  phase8.7-tier-matrix.txt
benchmark-requirements/: index.html
benchmarks/: index.html
bucket-policy/: index.html
cluster/: index.html
comparison/: index.html
conditional-requests/: index.html
distributed-placement-testing/: index.html
docs/: admin-api.md  architecture.md  benchmark-inventory.md  benchmark-requirements.md  benchmarks.md  bucket-policy.md  cluster.md  comparison.md  conditional-requests.md  disk-format.md  distributed-placement-testing.md  encryption.md  error-responses.md  healing.md  index.md  layer-optimization.md  metrics.md  multipart-upload.md  per-object-ec.md  presigned-urls.md  raft.md  s3-compliance.md  s3s-migration.md  security-review.md  static-topology.md  status.md  storage-layout.md  tagging.md  todo.md  versioning.md  write-cache.md  write-log.md  write-path.md  write-pool.md  write-wal.md
encryption/: index.html
error-responses/: index.html
healing/: index.html
layer-optimization/: index.html
metrics/: index.html
multipart-upload/: index.html
per-object-ec/: index.html
presigned-urls/: index.html
raft/: index.html
s3-compliance/: index.html
s3s-migration/: index.html
search/: search_index.json
security-review/: index.html
src/: config.rs  lib.rs  main.rs  query.rs  s3_access.rs  s3_auth.rs  s3_route.rs  s3_service.rs  timing.rs
src/admin/: handlers.rs  mod.rs  types.rs
src/cluster/: identity.rs  mod.rs  placement.rs  topology.rs
src/heal/: mod.rs  mrf.rs  scanner.rs  worker.rs
src/lifecycle/: evaluator.rs  filter.rs  mod.rs  types.rs
src/metrics/: http.rs  mod.rs
src/multipart/: mod.rs
src/policy/: action.rs  eval.rs  glob.rs  mod.rs  types.rs
src/raft/: mod.rs  runtime.rs  types.rs
src/s3/: auth.rs  errors.rs  handlers.rs  (+3 more)
status/: index.html
storage-layout/: index.html
stylesheets/: extra.css
tagging/: index.html
tests/: admin_integration.rs  bench_4kb.py  cache_replication.rs  compare_bench.sh  distributed_placement_integration.rs  e2e.py  layer_bench.rs  metrics.rs  s3_bucket_ops.rs  s3_config_stubs.rs  s3_ec.rs  s3_failure_injection.rs  s3_hostile_input.rs  s3_integration.rs  s3_lifecycle.rs  s3_multipart.rs  s3_object_ops.rs  s3_policy.rs  s3_protocol.rs  s3_tagging_conditional.rs  s3_versioning.rs
versioning/: index.html
write-cache/: index.html
write-path/: index.html
write-wal/: index.html
(+34 files in other folders)
