[package]
name = "abixio"
version = "0.1.0"
edition = "2024"

[dependencies]
reed-solomon-erasure = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
quick-xml = { version = "0.37", features = ["serialize"] }
sha2 = "0.10"
md-5 = "0.10"
hmac = "0.12"
hex = "0.4"
uuid = { version = "1", features = ["v4"] }
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
thiserror = "2"
subtle = "2"

[dev-dependencies]
tempfile = "3"
reqwest = { version = "0.12", features = ["blocking"] }
