[package]
name = "abixio"
version = "0.1.0"
edition = "2024"

[dependencies]
reed-solomon-erasure = { version = "6", features = ["simd-accel"] }
blake3 = "1"
bytes = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
sha2 = "0.10"
md-5 = "0.10"
hex = "0.4"
uuid = { version = "1", features = ["v4"] }
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
thiserror = "2"
async-trait = "0.1"
futures = "0.3"
s3s = "0.13"
form_urlencoded = "1"
base64 = "0.22"
dashmap = "6"
memmap2 = "0.9"
rmp-serde = "1"
xxhash-rust = { version = "0.8", features = ["xxh64"] }
hostname = "0.4.2"
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
crossbeam-queue = "0.3"
simd-json = "0.14"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Storage_FileSystem"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"
reqwest = { version = "0.12", features = ["blocking", "json"] }
aws-sdk-s3 = "1"
aws-config = "1"
aws-credential-types = "1"
aws-smithy-types = "1"
sonic-rs = "0.3"
